[package]
name = "debug-tag"
description = "Debug-only runtime tagging"
version = "0.1.0"
authors = ["Mike Pedersen <mike@mikepedersen.dk>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mpdn/debug-tag"
categories = ["rust-patterns", "development-tools::testing"]